javali_tests/OwnTestCases/ClassObject.javali
class Object {
}

class Main {
    void main() {
    }
}